@@ -4,10 +4,8 @@ use warnings;
 
 # Modules.
 use Map::Tube::Bucharest;
-use Test::More;
-use Test::Map::Tube;
-# TODO Opravit.
-#use Test::NoWarnings;
+use Test::Map::Tube 'tests' => 2;
+use Test::NoWarnings;
 
 # Test.
 ok_map(Map::Tube::Bucharest->new);
