@@ -1,4 +1,5 @@
 0.06
+ - Fix Test::Map::Tube and planning of tests.
 
 0.05 2015-03-06T09:01:05+01:00
  - Fix test dependencies.
